<resources>
    <string name="app_name">Minha Comunidade</string>

    <!-- Strings related to login -->
    <string name="cadastre_se_com_e_mail">Cadastre-se com e-mail</string>
    <string name="imagem_de_fundo">Imagem de fundo</string>
    <string name="minha_comunidade">Minha Comunidade</string>
    <string name="j_possui_uma_conta">Já possui uma conta?</string>
    <string name="login_com_o_facebook">Login com o Facebook</string>
    <string name="registro">Registro</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="criar_conta">Criar conta</string>
    <string name="ajude_nos_a_contruir_uma_cidademelhor">Ajude-nos a contruir uma #cidademelhor</string>
    <string name="fotografe_um_problema_ou_escolha_uma_foto_de_sua_galeria_e_seja_parte_da_mudan_a">Fotografe um problema ou escolha uma foto de sua galeria e seja parte da mudança</string>
    <string name="c_mera">Câmera</string>
    <string name="galeria_de_fotos">Galeria de Fotos</string>
    <string name="pr_dios">Prédios</string>
    <string name="fb_app_id">359005441168224</string>
    <string name="server_client_id">916737741161-h80lm90d9pt6dqpssbq1pji9ootg1m6o.apps.googleusercontent.com</string>
    <string name="title_activity_principal">Principal</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_barra_lateral">BarraLateral</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
