<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient"
    tools:context="com.comunidadeapp.minhacomunidade.SplashActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajude_nos_a_contruir_uma_cidademelhor"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_above="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="10dp"
        android:text="@string/fotografe_um_problema_ou_escolha_uma_foto_de_sua_galeria_e_seja_parte_da_mudan_a"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/c_mera"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_colored"
        android:text="@string/galeria_de_fotos"
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/pr_dios"
        app:srcCompat="@drawable/predios_white" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button3"
        android:layout_below="@+id/imageView" />

</RelativeLayout>
