<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="true"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    tools:context="com.comunidadeapp.minhacomunidade.MainActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/imagem_de_fundo"
        android:src="@drawable/city_background"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="97dp"
        app:srcCompat="@drawable/logo_text_white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/minha_comunidade"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/btnSignup"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />


    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_border"
        android:drawableStart="@drawable/icon_email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/cadastre_se_com_e_mail"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:theme="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="14sp"
        android:text="@string/j_possui_uma_conta"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout >
